Backport 925d82931c09dc11ea5a3bc410ea5cfd67ee14aa Manual Merge and 11 Compile fix